Fixed cell overflow

--- a/main.css
+++ b/main.css
@@ -106,9 +106,12 @@ table {
 th, td {
   border: 1px solid #111;
   height: 1.7rem;
-  overflow: scroll;
-  text-overflow: ellipsis;
   padding-top: 0.3rem;
+}
+
+.overflow {
+  width: 100%;
+  overflow: auto;
 }
 
 .highlighted {
